--- a/aulas_iw/aula03/index.html
+++ b/aulas_iw/aula03/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Aula 03 - Links e Imagens</h1>
     
-    <a href="https://www.google.com/"></a>
+    <a href="https://www.google.com/">Site google</a>
 
 
 </body>
