--- a/aulas_iw/aula03/index.html
+++ b/aulas_iw/aula03/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1>Aula 03 - Links e Imagens</h1>
     
-    <a href="https://www.google.com/">Site google</a>
+    <a href="https://www.google.com/"    target="_blank">Site google</a>
+    <a href="https://www.google.com/"    target="_parent">Site google</a>
+    <a href="https://www.google.com/"    target="_self">Site google</a>
+    <a href="https://www.google.com/"    target="_top">Site google</a>
+
 
 
 </body>
