--- a/aulas_iw/aula03/sobre.html
+++ b/aulas_iw/aula03/sobre.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 03</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Aula 03 - Links e Imagens</h1>
     
-    <a href="https://www.google.com/"    target="_blank">Site google 1 blank</a><br>
-
-
-
-
 </body>
 </html>
